@@ -31,6 +31,7 @@
   * Documented various Mechanize accessors.  GH #66
   * Mechanize now uses net-http-digest_auth.  GH #31
   * Mechanize now implements session cookies.  GH #78
+  * Mechanize now implements deflate decoding.  GH #40
 
 * Bug Fixes:
 
